compiler/fir/resolve/testData/resolve/stdlib/problems/toSortedMapWithComparator.kt
fun test(map: Map<String?, List<String>>) {
    val sortedMap = map.<!INAPPLICABLE_CANDIDATE!>toSortedMap<!>(nullsLast())
}
